create post module and add updates

--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@nestjs/graphql": "^13.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.0.11",
+    "@nestjs/sequelize": "^11.0.0",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/throttler": "^6.4.0",
-    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.0.8",
+    "bannar": "file:",
     "bcrypt": "^5.1.1",
     "bull": "^4.16.5",
     "bullmq": "^5.40.2",
@@ -57,9 +59,9 @@
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "bannar": "file:",
-    "socket.io": "^4.8.1",
-    "typeorm": "^0.3.20"
+    "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -69,6 +71,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
