--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "@apollo/server": "^4.11.3",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^13.0.2",
-    "@nestjs/bull": "^11.0.0",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.8",
     "@nestjs/graphql": "^13.0.2",
@@ -61,7 +60,8 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
